--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,19 @@
 <div class="container">
-<h3 class="d-flex justify-content-center">Mangular 12 Frontend</h3>
-<!-- navbar -->
-
+  <h3 class="d-flex justify-content-center">Mangular 12 Frontend</h3>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <button class="m-1 btn btn-light btn-outline-primary" routerLink="home" routerLinkActive="active">Home</button>
+      </li>
+      <li class="nav-item">
+        <button class="m-1 btn btn-light btn-outline-primary" routerLink="departament" routerLinkActive="active">Departament</button>
+      </li>
+      <li class="nav-item">
+        <button class="m-1 btn btn-light btn-outline-primary" routerLink="employee" routerLinkActive="active">Employee</button>
+      </li>
+    </ul>
+  </nav>
 </div>
 
 <router-outlet></router-outlet>
